--- a/MyViettel/package.json
+++ b/MyViettel/package.json
@@ -10,7 +10,7 @@
     "native-base": "^2.8.2",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-navigation": "^3.0.8"
+    "react-navigation": "1.5.8"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
