--- a/MyViettel/package.json
+++ b/MyViettel/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.23.0",
     "native-base": "^2.8.2",
     "react": "16.0.0",
     "react-native": "0.51.0",
