--- a/MyViettel/package.json
+++ b/MyViettel/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.51.0",
     "react-native-animatable": "^1.3.0",
     "react-native-qrcode": "0.2.6",
+    "react-native-scaling-drawer": "^1.0.1",
     "react-native-tab-view": "0.0.70",
     "react-navigation": "1.5.8"
   },
