--- a/MyViettel/android/app/build.gradle
+++ b/MyViettel/android/app/build.gradle
@@ -98,11 +98,11 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.myviettel"
+        applicationId "com.neon.viettel"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 10001
-        versionName "1.1"
+        versionCode 10004
+        versionName "1.4"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -159,6 +159,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
